--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -12,7 +12,7 @@
 
 		<header>
 			<div class="container">
-				<h1>Aparecida Nutrição</h1>
+				<h1 class="titulo">Aparecida Nutrição</h1>
 			</div>
 		</header>
 		<main>
@@ -73,7 +73,8 @@
 			</section>
 		</main>
 
-<script src="js/principal.js"></script>
+<script src="js/principal.js">
 
+</script>
 	</body>
 </html>
